[project]
name = "plugin-files"
version = "0.6.2"
description = "File storage + browser UI for Luna. Built on luna_sdk v0."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = ["fastapi>=0.110"]

[project.optional-dependencies]
# The `object` backend (Tigris/R2) needs an S3 client; only installed where used.
object = ["boto3>=1.34"]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "boto3>=1.34", "moto>=5", "aiosqlite>=0.20"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
